[project]
name = "douyin_crawl"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zouzanyan"},
]
dependencies = ["PyExecJS>=1.5.1", "requests>=2.32.4", "tqdm>=4.67.1", "loguru>=0.7.3"]
requires-python = ">=3.8.6"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = false
